finished with tiles, adjusted wrapping, small corrections

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,15 @@
+.footer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .localization,
 .phone,
 .email {
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-style: normal;
 }
 
 a:hover,
@@ -11,6 +17,10 @@ a:focus,
 a:active {
     color: rgb(11,142,54, 1);
     cursor: pointer;
+}
+
+a:focus {
+    text-decoration: underline;
 }
 
 /* Mobile */
@@ -36,7 +46,6 @@ a:active {
     }
 
     .footer {
-        display: flex;
         flex-direction: row;
         justify-content: space-between;
         padding: var(--space--m);
@@ -52,9 +61,9 @@ a:active {
 /* Desktop and tablet */
 @media only screen and (min-width: 768px) {
     .footer {
-        display: flex;
         justify-content: space-around;
-        padding: 5rem;;
+        flex-wrap: wrap;
+        padding: 2.5rem;;
     }
 
     .footer div {
@@ -63,6 +72,8 @@ a:active {
 
     .footer a {
         font-size: var(--font-size__h2--desktop);
+        padding-top: 2.5rem;
+        padding-bottom: 2.5rem;
     }
 
     .footer img {
